kubernetes/networking/error-pages/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: error-pages
  labels:
    app.kubernetes.io/name: error-pages
    app.kubernetes.io/part-of: error-pages
